ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avengers-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: avengers.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: avengers-service
            port:
              number: 3000
